--- a/examples/mono-managed/CMakeLists.txt
+++ b/examples/mono-managed/CMakeLists.txt
@@ -71,7 +71,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} PRIVATE glfw3)
 
 if(DBUILD_ANDROID EQUAL 0)
-target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
+#target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
 target_link_libraries(${PROJECT_NAME} PRIVATE openal)
 endif()
 target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
