--- a/examples/model/CMakeLists.txt
+++ b/examples/model/CMakeLists.txt
@@ -42,10 +42,10 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${Mono_INCLUDE_DIRS})
 if(DBUILD_ANDROID EQUAL 0)
 if(WIN32)
 target_link_libraries(${PROJECT_NAME} PRIVATE openal32)
-target_link_libraries(${PROJECT_NAME} PRIVATE assimp-5.dll)
+#target_link_libraries(${PROJECT_NAME} PRIVATE assimp-5.dll)
 else()
 target_link_libraries(${PROJECT_NAME} PRIVATE openal)
-target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
+#target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
 endif()
 endif()
 target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
