--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,11 +276,13 @@ if (BUILD_AS_LIBRARY)
     if (MSVC)
         target_compile_options(${PROJECT_NAME} PRIVATE /W0)
     else ()
+    if(WIN32)
         #target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
-         set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++")
+         set(CMAKE_EXE_LINKER_FLAGS "-static -libstdc++")
          #set(CMAKE_SHARED_LINKER_FLAGS "-static-libgcc -static-libstdc++ -lstdc++")
          #set(CMAKE_MODULE_LINKER_FLAGS "-Bstatic -static -static-libgcc -static-libstdc++ -lstdc++")
         # target_compile_options(${PROJECT_NAME} PUBLIC -Bstatic -static -static-libgcc -static-libstdc++ -lstdc++)
+        endif()
     endif ()
 else ()
     add_executable(${PROJECT_NAME} main.cpp
