added gpu mapped storage buffer access and textures to bsp example app

--- a/examples/bsp/CMakeLists.txt
+++ b/examples/bsp/CMakeLists.txt
@@ -13,13 +13,14 @@ message(STATUS "location of epsilon build: " ${EPSILON_BUILD_LOCATION})
 message(STATUS "location of vulkan libs: " ${Vulkan_LIBRARIES})
 
 add_dependencies(${PROJECT_NAME} Epsilon)
+set(BUILD_AS_LIBRARY ON)
 
-if (BUILD_AS_LIBRARY)
+if (TRUE)
 if(WIN32)
     if (MSVC)
-        target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+        target_link_libraries(${PROJECT_NAME} PUBLIC Epsilon)
     else ()
-        target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+        target_link_libraries(${PROJECT_NAME} PUBLIC Epsilon)
     endif()
 else ()
     target_link_libraries(${PROJECT_NAME} PUBLIC ${EPSILON_BUILD_LOCATION}/libEpsilon.so)
