--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ Epsilon
 /modules/mono/test
 cmake-build-debug-coverage/
 cmake-build-release/
+/projects
 
 CMakeSettings.json
 assets/shaders/fragment.spv
