various fixes, added back SRGB renderpass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,6 +252,7 @@ set(PROJECT_FILES
         ${CMAKE_SOURCE_DIR}/core/framework/window.cpp
         ${CMAKE_SOURCE_DIR}/core/framework/window.cpp
         ${CMAKE_SOURCE_DIR}/core/framework/clock.cpp
+        ${CMAKE_SOURCE_DIR}/core/framework/loaders/model.cpp
         ${CMAKE_SOURCE_DIR}/modules/mono/mono-instance.hpp
         ${CMAKE_SOURCE_DIR}/Epsilon.cpp
         ${CMAKE_SOURCE_DIR}/Epsilon.hpp
