--- a/platform/android/app/build.gradle
+++ b/platform/android/app/build.gradle
@@ -17,10 +17,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags '-std=c++17'
+                cppFlags '-std=c++20'
                 // Sets a flag to enable format macro constants for the C compiler.
                 //cFlags += "-D__ANDROID__"
                 //cppFlags += "-D__ANDROID__"
+                cFlags += "-Wno-error=format-security"
+                cppFlags += "-Wno-error=format-security unsafe-buffer-usage"
 
             }
         }
@@ -30,6 +32,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -48,17 +51,23 @@ android {
     }
     buildFeatures {
         viewBinding true
+        prefab true
+
     }
     ndkVersion '25.2.9519653'
-    buildToolsVersion '33.0.0'
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.games:games-activity:2.0.2'
+
+    implementation("androidx.games:games-activity:2.0.2")
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
