--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -351,14 +351,18 @@ if (BUILD_AS_LIBRARY)
         target_compile_options(${PROJECT_NAME} PRIVATE /W3)
     else ()
     if(WIN32)
-        #target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
-         set(CMAKE_EXE_LINKER_FLAGS "-static -libstdc++")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
+            #target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
+             set(CMAKE_EXE_LINKER_FLAGS "-static -libstdc++")
          #set(CMAKE_SHARED_LINKER_FLAGS "-static-libgcc -static-libstdc++ -lstdc++")
          #set(CMAKE_MODULE_LINKER_FLAGS "-Bstatic -static -static-libgcc -static-libstdc++ -lstdc++")
         # target_compile_options(${PROJECT_NAME} PUBLIC -Bstatic -static -static-libgcc -static-libstdc++ -lstdc++)
         endif()
     endif ()
 else ()
+    if(WIN32)
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
+        endif()
     add_executable(${PROJECT_NAME} main.cpp
             ${PROJECT_FILES} ${PROJECT_ICON})
 endif ()
