added new pass to editor and viewport widget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -516,6 +516,7 @@ install(DIRECTORY ${images} DESTINATION "bin/assets")
 #add_subdirectory(examples/chess)
 #add_subdirectory(examples/model)
 #if(!BUILD_AS_LIBRARY)
+    add_subdirectory(editor)
     add_subdirectory(examples/bsp)
     add_subdirectory(projects/TowerDefense)
     if(${Mono_FOUND})
