--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Main Window]
-Pos=0,0
-Size=1920,1017
+Pos=0,20
+Size=1920,997
 Collapsed=0
 
 [Window][Debug##Default]
@@ -13,6 +13,12 @@ Pos=10,10
 Size=205,341
 Collapsed=0
 
+[Window][Main Viewport]
+Pos=0,20
+Size=1920,997
+Collapsed=0
+DockId=0x9AC0FB4B,0
+
 [Docking][Data]
-DockSpace ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,0 Size=1920,1017 CentralNode=1
+DockSpace ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,20 Size=1920,997 CentralNode=1 Selected=0xB90D41F9
 
