added new editor proyect

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.0.0)
 project(Editor VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 20)
 
+
+set(THIRDPARTY_DIR "${CMAKE_SOURCE_DIR}/thirdparty")
+
 include_directories(${CMAKE_SOURCE_DIR} ../)
 
 set_source_files_properties( ${PROJECT_ICON} PROPERTIES RESOURCES Resources )
@@ -25,7 +28,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC glfw3 Epsilon ${CMAKE_DL_LIBS} ${Mono_LINK_LIBRARIES} ${Vulkan_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PUBLIC glfw3 Epsilon ${THIRDPARTY_DIR}/nethost.lib  OleAut32 ${CMAKE_DL_LIBS} ${Mono_LINK_LIBRARIES} ${Vulkan_LIBRARIES})
 
 if(WIN32)
     target_link_libraries(${PROJECT_NAME} PRIVATE OpenAL32.dll)
