--- a/imgui.ini
+++ b/imgui.ini
@@ -1,24 +1,76 @@
 [Window][Main Window]
-Pos=0,20
-Size=1920,997
+Pos=0,70
+Size=1280,650
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=-15,220
+Size=1057,629
 Collapsed=0
 
 [Window][Info]
 Pos=10,10
-Size=205,341
+Size=188,373
 Collapsed=0
 
 [Window][Main Viewport]
-Pos=0,20
-Size=1920,997
+Pos=0,70
+Size=854,650
 Collapsed=0
-DockId=0x9AC0FB4B,0
+DockId=0x00000005,0
+
+[Window][Inspector]
+Pos=856,70
+Size=212,375
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Gizmo]
+Pos=344,29
+Size=1057,629
+Collapsed=0
+
+[Window][Debug]
+Pos=1116,551
+Size=121,104
+Collapsed=0
+
+[Window][Properties]
+Pos=856,447
+Size=212,273
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Ventana de ejemplo]
+Pos=1460,20
+Size=220,997
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][My window]
+Pos=590,316
+Size=314,202
+Collapsed=0
+
+[Window][Scene Nodes]
+Pos=1070,70
+Size=210,650
+Collapsed=0
+DockId=0x00000008,0
+
+[Table][0x6B582E0B,2]
+RefScale=15
+Column 0  Weight=1.0000
+Column 1  Width=65
 
 [Docking][Data]
-DockSpace ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,20 Size=1920,997 CentralNode=1 Selected=0xB90D41F9
+DockSpace       ID=0x9AC0FB4B Window=0x8FE86BE8 Pos=0,70 Size=1280,650 Split=X Selected=0xB90D41F9
+  DockNode      ID=0x00000007 Parent=0x9AC0FB4B SizeRef=1068,650 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=854,700 Split=X Selected=0xB90D41F9
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=818,700 CentralNode=1 Selected=0xB90D41F9
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=220,700 Selected=0xD1FBC3F2
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=212,700 Split=Y Selected=0xE7039252
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=230,547 Selected=0xE7039252
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=230,398 Selected=0x199AB496
+  DockNode      ID=0x00000008 Parent=0x9AC0FB4B SizeRef=210,650 Selected=0x2A411669
 
